--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
+    "micro": "^10.0.1",
     "mongoose": "^8.0.3",
     "next": "14.0.4",
     "react": "^18",
